<resources>
    <string name="app_name">Recursos Humanos</string>
    <string name="splash_image_description">Sifrão laranja em fundo azul claro</string>
    <string name="app_description_text">Esse é o nosso aplicativo dr cadastro de funcionários.\nAqui vamos cadastrar as informações e calcular o salário do funcionário.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro_informacoes_text">Cadastro de Informações</string>
    <string name="nome_e_sobrenome_hint">Nome e Sobrenome</string>
    <string name="horas_trabalhadas_hint">Horas trabalhadas</string>
    <string name="valor_por_hora_hint">Valor por Hora</string>
    <string name="btn_calcular_text">calcular salário</string>
</resources>